--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,92 +1,157 @@
-body {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background: linear-gradient(to bottom, #aedcf7, #fde45f); /* Adjust colors as needed */
-    font-family: 'Arial', sans-serif;
-}
+@media only screen and (min-width: 769px) {
+    body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background: linear-gradient(to bottom, #aedcf7, #fde45f); /* Adjust colors as needed */
+        font-family: 'Arial', sans-serif;
+    }
 
-#container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-
-#drink-can {
-    width: 400px; /* Adjust size as needed */
-    height: auto;
-    position: relative;
-    filter: drop-shadow(0 10px 20px rgba(0, 0, 0, 0.2)); 
-    transition: transform 0.5s ease; 
-}
-
-#drink-can:hover {
-    transform: scale(1.025);
-}
-
-#logo {
-    position: absolute;
-    top: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-#info-left,
-#info-right {
+    #drink-can {
+        width: 400px; /* Adjust size as needed */
+        height: auto;
+        position: relative;
+        filter: drop-shadow(0 10px 20px rgba(0, 0, 0, 0.2)); 
+    }
+    
+    #logo {
         position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        padding: 10px;
-        color: #703d27; 
-        font-size: 25px; 
-        font-weight: bold;
-        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); 
-        border-radius: 8px;
-        width: 400px; 
+        top: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    .logo-img {
+        width: 200px;
+        height: auto;
+    }
+    
+    #info-left,
+    #info-right {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            padding: 10px;
+            color: #703d27; 
+            font-size: 25px; 
+            font-weight: bold;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); 
+            border-radius: 8px;
+            width: 400px; 
+            text-align: center;
+    }
+    
+    #info-left {
+        left: 400px;
+    }
+    
+    #info-right {
+        right: 400px;
+    }
+    
+    #name {
+        font-family: 'Dancing Script', cursive;
+        font-weight: 700;
+    }
+
+    
+    .leaf {
+        display: block;
+        position: absolute;
+        width: 1000px; /* Adjust leaf size as needed */
+        height: auto; /* Adjust leaf size as needed */
+    }
+    
+    /* Left leaf */
+    .left {
+        top: 0px;
+        left: 0px;
+    }
+    
+    /* Right leaf */
+    .right {
+        top: 0px;
+        right: 0px;
+    }
+
+    #hashtags {
+        position: absolute;
+        bottom: 50px;
+        left: 100px;
+        right: 100px;
+        font-size: 22px;
+        display: flex;
+        justify-content: space-between;
+        color: #333; 
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+    
+    }
+
+    #container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+    }
+  
+  }
+  
+@media only screen and (max-width: 768px) {
+    body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background: linear-gradient(to bottom, #aedcf7, #fde45f) no-repeat fixed;
+        font-family: 'Arial', sans-serif;
+    }
+
+    #drink-can {
+        width: 200px; /* Adjust size as needed */
+        height: auto;
+        position: relative;
+        filter: drop-shadow(0 10px 20px rgba(0, 0, 0, 0.2)); 
+        margin-top: 30px;
+    }
+
+    #logo {
+        position: absolute;
+        top: 10px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    .logo-img {
+        width: 100px;
+        height: auto;
+    }
+
+    .leaf{
+        display: none;
+    }
+
+    #hashtags {
+        position: absolute;
+        bottom: 5px;
+        left: 10px;
+        right: -10px;
+        font-size: 12px;
+        display: flex;
+        justify-content: space-between;
+        color: #333; 
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+    
+    }
+
+    #container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        flex-direction: column;
+    }
+    #info-left,
+    #info-right {
         text-align: center;
-}
-
-#info-left {
-    left: 400px;
-}
-
-#info-right {
-    right: 400px;
-}
-
-#hashtags {
-    position: absolute;
-    bottom: 50px;
-    left: 100px;
-    right: 100px;
-    font-size: 22px;
-    display: flex;
-    justify-content: space-between;
-    color: #333; 
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-
-}
-
-#name {
-    font-family: 'Dancing Script', cursive;
-    font-weight: 700;
-}
-
-.leaf {
-    position: absolute;
-    width: 1000px; /* Adjust leaf size as needed */
-    height: auto; /* Adjust leaf size as needed */
-}
-
-/* Left leaf */
-.left {
-    top: 0px;
-    left: 0px;
-}
-
-/* Right leaf */
-.right {
-    top: 0px;
-    right: 0px;
-}
+        margin-top: 20px;
+    }
+  }
