--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,11 +42,11 @@
     }
     
     #info-left {
-        left: 250px;
+        left: 25%;
     }
     
     #info-right {
-        right: 250px;
+        right: 25%;
     }
     
     #name {
