--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,8 +8,8 @@
     }
 
     #drink-can {
-        width: 400px; /* Adjust size as needed */
-        height: auto;
+        width: auto; /* Adjust size as needed */
+        height: 80%;
         position: relative;
         filter: drop-shadow(0 10px 20px rgba(0, 0, 0, 0.2)); 
     }
@@ -33,7 +33,7 @@
             transform: translateY(-50%);
             padding: 10px;
             color: #703d27; 
-            font-size: 25px; 
+            font-size: 150%; 
             font-weight: bold;
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); 
             border-radius: 8px;
