--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,8 @@
 
     #drink-can {
         width: auto; /* Adjust size as needed */
-        height: 80%;
+        height: 70%;
+        top: -10%;
         position: relative;
         filter: drop-shadow(0 10px 20px rgba(0, 0, 0, 0.2)); 
     }
@@ -29,7 +30,7 @@
     #info-left,
     #info-right {
             position: absolute;
-            top: 50%;
+            top: 40%;
             transform: translateY(-50%);
             padding: 10px;
             color: #703d27; 
@@ -93,6 +94,16 @@
         align-items: center;
         height: 100vh;
     }
+
+    #description {
+        position: absolute;
+        bottom: 10%;
+        color: #703d27;
+        font-weight: bold;
+        font-size: 150%; 
+        width: 800px;
+        text-align: center;
+    }
   
   }
   
@@ -152,6 +163,14 @@
     #info-left,
     #info-right {
         text-align: center;
-        margin-top: 20px;
+        margin: 0;
+    }
+
+    #description {
+        color: #703d27;
+        width: 80%;
+        font-size: 12px;
+        text-align: center;
+        margin: 0;
     }
   }
